--- a/index.html
+++ b/index.html
@@ -120,6 +120,32 @@
             <div class="content-section">
                 <h2 class="section-heading">CONTACT</h2>
                 <p class="section-sub-heading">Fan? Drop a note!</p>
+
+                <div class="row">
+                    <div class="col col-half">
+                        <p><i class="ti-location-pin"></i>Chicago, US</p>
+                        <p><i class="ti-mobile"></i>Phone: +00 151515</p>
+                        <p><i class="ti-email"></i>https://Email: mail@mail.com/</p>
+                    </div>
+                    <div class="col col-half">
+                        <form action="">
+                            <div class="row">
+                                <div class="col col-half">
+                                    <input type="text" placeholder="Name" class="form-control">
+                                </div>
+                                <div class="col col-half">
+                                    <input type="email" placeholder="Email" class="form-control">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col col-full">
+                                    <input type="text" placeholder="Message" class="form-control">
+                                </div>
+                            </div>
+                            <input type="submit" value="SEN">
+                        </form>
+                    </div>
+                </div> 
             </div>
 
 
