--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./assets/style.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/font/themify-icons/themify-icons.css">
     <title>Document</title>
 </head>
 <body>
@@ -159,13 +159,14 @@
 
         <div id="footer">
             <div class="cosials-list">
-                <a href="#"><i class="ti-facebook">Facebook</i></a>
-                <a href="#"><i class="ti-instagram">Instagram</i></a>
-                <a href="#"><i class="ti-youtube">Youtube</i></a>
-                <a href="#"><i class="ti-printer">Printer</i></a>
-                <a href="#"><i class="ti-twitter">Twitter</i></a>
-                <a href="#"><i class="ti-linkedin">Linkedin</i></a>
+                <a href="#"><i class="ti-facebook"></i></a>
+                <a href="#"><i class="ti-instagram"></i></a>
+                <a href="#"><i class="ti-youtube"></i></a>
+                <a href="#"><i class="ti-printer"></i></a>
+                <a href="#"><i class="ti-twitter"></i></a>
+                <a href="#"><i class="ti-linkedin"></i></a>
             </div>
+            <p class="copyright">Powered by <a href="">w3.css</a></p>
         </div>
     </div>
 </body>
